<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="txtName1">All Songs</string>
    <string name="txtName2">Albums</string>
    <string name="txtName3">Artists</string>
    <string name="allSongs">All Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playImage">Play</string>
    <string name="song_name">Song Name</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="nowPlaying">NowPlaying</string>
    <string name="defaultpicture">defaultPicture</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="artist_name">Artist Name</string>
</resources>
