<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/songImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:contentDescription="@string/wallpaper"
        app:srcCompat="@drawable/music" />

    <TextView
        android:id="@+id/songText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/txtSize"
        tools:text="Song Name" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="0:00" />

        <TextView
            android:id="@+id/timeStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="295dp"
            android:text="3:30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pauseButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding"
            android:layout_weight="1"
            android:text="@string/pause" />

        <Button
            android:id="@+id/playButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding"
            android:layout_weight="1"
            android:text="@string/play" />

        <Button
            android:id="@+id/stopButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding"
            android:layout_weight="1"
            android:text="@string/stop" />
    </LinearLayout>

</LinearLayout>